[tool.poetry]
name = "evofr"
version = "0.1.16"
description = "Tools for evolutionary forecasting."
authors = ["marlinfiggins <marlinfiggins@gmail.com>"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.4"
pandas = "^1.4.2"
jax = "^0.3.13"
jaxlib = "^0.3.10"
numpyro = "^0.9.2"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
pytest = "^7.1.2"
matplotlib = "^3.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
