[tool.poetry]
name = "evofr"
version = "0.1.20"
description = "Tools for evolutionary forecasting."
authors = ["marlinfiggins <marlinfiggins@gmail.com>"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.4"
pandas = "^1.4.2"
jax = "^0.4.1"
jaxlib = "^0.4.1"
numpyro = "^0.12.0"
blackjax = "^0.9.6"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
pytest = "^7.1.2"
matplotlib = "^3.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
