[tool.poetry]
name = "evofr"
version = "0.1.27"
description = "Tools for evolutionary forecasting."
authors = ["marlinfiggins <marlinfiggins@gmail.com>"]
license = "AGPL-3.0"

[tool.poetry.scripts]
evofr = "evofr.cli:main"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.4"
pandas = "^1.4.2"
jax = "^0.4.14"
jaxlib = "^0.4.1"
numpyro = "^0.13.2"
blackjax = "^0.9.6"
matplotlib = "^3.9"
seaborn = "^0.13.2"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
pytest = "^7.1.2"
black = "^24.4.2"
pylint = "^3.1.0"
wrapt = "^1.16.0"
sphinx = "^7.3.7"
sphinx-rtd-theme = "^2.0.0"
nbsphinx = "^0.9.4"
pandoc = "^2.3"
isort = "^5.13.2"
pre-commit = "^3.7.1"

[docs]
jupyter = "^1.0.0"
sphinx = "^7.3.7"
sphinx-rtd-theme = "^2.0.0"
nbsphinx = "^0.9.4"
pandoc = "^2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
